--- a/Andrew/View/UserManagement/Registration/UserRegistration.storyboard
+++ b/Andrew/View/UserManagement/Registration/UserRegistration.storyboard
@@ -60,6 +60,9 @@ DQ
                                 <buttonCell key="cell" type="push" title="Mégsem" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="qD3-1D-ZSd">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
+                                    <string key="keyEquivalent" base64-UTF8="YES">
+Gw
+</string>
                                 </buttonCell>
                                 <connections>
                                     <action selector="cancelButtonClicked:" target="UoY-eR-qNH" id="9OJ-tE-EsR"/>
